# RatingDay

./: .gitignore  .gitmodules  GenerateProject.bat  README.md
Sources/: CMakeLists.txt
Sources/Engine/: CMakeLists.txt
Sources/Engine/Core/: AppWindow.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Help.cpp  Help.h  ImGuiHelp.h  MainWindow.cpp  MainWindow.h  Singletone.h  WindowsManager.cpp  WindowsManager.h
Sources/Program/: Calendar.cpp  Calendar.h  CalendarWindow.cpp  CalendarWindow.h  ContentView.h  ContentWindow.h  Data.cpp  Data.h  DataManager.cpp  DataManager.h  Initialize.cpp  Main.cpp  MainInternal.cpp  MainWindow.cpp  MainWindow.h  Rating.cpp  Rating.h  RatingWindow.cpp  RatingWindow.h  SelectorWindow.cpp  SelectorWindow.h  Statistics.cpp  Statistics.h  StatisticsWindow.cpp  StatisticsWindow.h  ViewManager.cpp  ViewManager.h
